# ET54.py

./: .gitignore  ET54.html  ET54.py  ET54_test.py  ET54_test_voltage.py  ET54xx.py  Makefile  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
ET54/: __init__.py  channel.py  instrument.py
examples/: battery_discharge.py
src/ET54/: _support_functions.py  channel.py  instrument.py
src/tests/: ET54_test.py  ET54_test_voltage.py  README.md  testconfig.py
tests/: ET54_test.py  ET54_test_voltage.py  testconfig.py
tools/fwupdater/: Cargo.toml  ET54A+.150.025.hex  ET54A+.150.X26.hex  Makefile  README.md  foo.py  fwupdater.py
tools/fwupdater.py/: README.md  fwupdater.py
tools/fwupdater/images/: ET54A+.150.A15.hex  ET54A+.150V.2606.027.hex  sha256sum.txt
tools/fwupdater/src/: main.rs
