[package]
name = "et54fwupdater"
version = "0.1.0"
edition = "2024"
authors = ["Philipp Pagel"]
description = "Firmware updater for ET54xx electronic loads"
license = "MIT"

[dependencies]
anyhow = "1.0"
serialport = "4.7"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8.35"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
